# sharexd

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  config.py  docker-compose.yml  extensions.py  main.py  mise.toml  pyproject.toml  sxd.sh  users.json.example
.github/: FUNDING.yml
docs/: r2_setup.md
routes/: captcha.py  errors.py  files.py  home.py  tarpit.py  upload.py
static/: style.css
templates/: _logo.html  _logo_small.html  archive.html  audio.html  base.html  delete.html  image.html  index.html  text.html  verify_regex.html  verify_rhythm.html  verify_slider.html  verify_sql.html  viewer.html
utils/: archive.py  filters.py  generate_filename.py  get_storage_info.py  meta_db.py  metadata.py  security.py  storage.py
