[project]
name = "sharexd"
version = "1.2.6"
description = "A simple, self-hosted file sharing server."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "AGPL-3.0-only" }
maintainers = [
    { name = "s4wyer" }
]
dependencies = [
    "boto3>=1.43.40",
    "flask>=3.1.3",
    "flask-limiter>=4.1.1",
    "gunicorn>=26.0.0",
    "lmdb>=2.2.1",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "werkzeug>=3.1.8",
]

[project.urls]
Repository = "https://github.com/s4wyer/sharexd"
